--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,12 @@ jobs:
       - name: Checkout source code. # 레포지토리 체크아웃
         uses: actions/checkout@master
 
+      - name: Cache node modules # node modules 캐싱
+        uses: actions/cache@v1
+        with:
+          path: node_modules
+          key: ${{ runner.OS }}-build-${{ hasFiles('**/package-lock.json') }}
+
       - name: Install Dependencies # 의존 파일 설치
         run: npm install
 
@@ -22,4 +28,4 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp ./build/* s3://${{ secrets.AWS_S3_BUCKET }} --recursive --region ap-northeast-2
+          aws s3 cp build s3://dailyfocus-app-d-frontend --recursive --region ap-northeast-2
