adding s3 bucket path

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,3 +23,4 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws s3 cp build s3://dailyfocus-app-d-frontend --recursive --region ap-northeast-2
+          aws s3 cp build s3://kd-sp3-dailyfocus --recursive --region ap-northeast-2
